# test-web-view

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  deno.json  styles.css
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  commands.rs  constants.rs  domain.rs  helpers.rs  lib.rs  main.rs  scripts.rs  state.rs  updater.rs  webview.rs
ui/: index.html  main.js  styles.css
